@@ -1,3 +1,5 @@
+* The parameter userData ["UI"]["visible"] is now supported.
+
 * Fixed failing test GafferTest.ParameterisedHolderTest.testAddAndRemoveParameters. Parameters may now be added or removed within a ParameterisedHolder::ParameterModificationContext.
 
 0.13.0
